--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <p>&copy; 2023 Sambalpur University</p>
   </footer>
 
-
+<script>
 
     // Animate professor cards
     document.addEventListener("DOMContentLoaded", function() {
