--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
           </div><div class="professor-card">
             <img src="mr-manas-ranjan-jena.jpg" alt="Mr. Manas Ranjan Jena">
             <h3>Mr. Manas Ranjan Jena</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>With your guidance, we’ve learned to face challenges head-on. Your support means the world to us.</p>
           </div>
 <div class="professor-card">
             <img src="mr-debashis-sahoo.jpg" alt="Mr. Debashis Sahoo">
             <h3>Mr. Debashis Sahoo</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Thank you for making learning an engaging journey. Your enthusiasm and expertise have left a lasting impact.</p>
 </div>
 
 
@@ -68,7 +68,7 @@
           <div class="professor-card">
             <img src="mrs-priyanka-sahoo.jpg" alt="Mrs. Priyanka Sahoo">
             <h3>Mrs. Priyanka Sahoo</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Thank you for your unwavering support and for always believing in us. Your kindness and knowledge are truly appreciated.</p>
           </div>
           
           
@@ -76,7 +76,7 @@
       </div><div class="professor-card">
             <img src="ms-krishna-manjari-jena.jpg" alt="Ms. Krishna Manjari Jena">
             <h3>Ms. Krishna Manjari Jena</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Your warmth and patience make the learning environment so much brighter. We appreciate all that you do.</p>
           </div>
 
 
