--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
           <div class="professor-card">
             <img src="dr-duryadhan-behera.jpg" alt="Dr. Duryadhan Behera">
             <h3>Dr. Duryadhan Behera(H.O.D.)</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Your dedication to knowledge and your unwavering guidance have shaped us into better learners. Thank you for your wisdom.</p>
           </div>
           <div class="professor-card">
             <img src="dr-jagadish-behera.jpg" alt="Dr. Jagadish Tripathy">
             <h3>Dr. Jagadish Tripathy</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Thank you for leading us with both intellect and compassion. Your influence goes beyond the classroom.</p>
           </div>
           <div class="professor-card">
             <img src="dr-haridas-mohanta.jpg" alt="Dr. Haridas Mohanta">
             <h3>Dr. Haridas Mohanta</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p></p>
           </div>
           <div class="professor-card">
             <img src="dr-asmita-mohanty.jpg" alt="Dr. Asmita Mohanty">
@@ -56,7 +56,7 @@
           <div class="professor-card">
             <img src="dr-asim-pratihari.jpg" alt="Dr. Asim Pratihari">
             <h3>Dr. Asim Pratihari</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Your Your passion for teaching and deep understanding have inspired us all. We are grateful for your mentorship.</p>
           </div>
           
           <div class="professor-card">
