--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="professor-card">
             <img src="dr-haridas-mohanta.jpg" alt="Dr. Haridas Mohanta">
             <h3>Dr. Haridas Mohanta</h3>
-            <p></p>
+            <p>Your insightful lessons and encouragement have opened new doors of understanding for us. Thank you for being an incredible teacher.</p>
           </div>
           <div class="professor-card">
             <img src="dr-asmita-mohanty.jpg" alt="Dr. Asmita Mohanty">
