--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="professor-card">
             <img src="dr-asmita-mohanty.jpg" alt="Dr. Asmita Mohanty">
             <h3>Dr. Asmita Mohanty</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Your kindness and wisdom make learning a joy. Thank you for being such a wonderful guide.</p>
           </div><div class="professor-card">
             <img src="mr-manas-ranjan-jena.jpg" alt="Mr. Manas Ranjan Jena">
             <h3>Mr. Manas Ranjan Jena</h3>
@@ -62,7 +62,7 @@
           <div class="professor-card">
             <img src="mr-paresh-ranjan-das.jpg" alt="Mr. Paresh Ranjan Das">
             <h3>Mr. Paresh Ranjan Das</h3>
-            <p>Department of Earth Science, Sambalpur University</p>
+            <p>Your guidance and dedication have paved the way for our success. Thank you for always inspiring us to reach new heights.</p>
           </div>
           
           <div class="professor-card">
