--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
             <h3>Dr. Asim Pratihari</h3>
             <p>Your Your passion for teaching and deep understanding have inspired us all. We are grateful for your mentorship.</p>
           </div>
-          
+          <div class="professor-card">
+    <img src="dr-geetika-tripathy.jpg" alt="Dr. Geetika Tripathy">
+    <h3>Dr. Geetika Tripathy</h3>
+    <p>Your gentle guidance and wisdom have made a lasting impact on our journey. Thank you for being an incredible mentor.</p>
+</div>
+
           <div class="professor-card">
             <img src="mr-paresh-ranjan-das.jpg" alt="Mr. Paresh Ranjan Das">
             <h3>Mr. Paresh Ranjan Das</h3>
