--- a/index.html
+++ b/index.html
@@ -23,55 +23,55 @@
         <h2>Meet Our Professors from the Department of Earth Science, Sambalpur University</h2>
         <div class="professor-grid">
           <div class="professor-card">
-            <img src="dr-duryadhan-behera.jpg" alt="Dr. Duryadhan Behera">
+            <img src="img/dr-duryadhan-behera.jpg" alt="Dr. Duryadhan Behera">
             <h3>Dr. Duryadhan Behera(H.O.D.)</h3>
             <p>Your dedication to knowledge and your unwavering guidance have shaped us into better learners. Thank you for your wisdom.</p>
           </div>
           <div class="professor-card">
-            <img src="dr-jagadish-behera.jpg" alt="Dr. Jagadish Tripathy">
+            <img src="img/dr-jagadish-behera.jpg" alt="Dr. Jagadish Tripathy">
             <h3>Dr. Jagadish Tripathy</h3>
             <p>Thank you for leading us with both intellect and compassion. Your influence goes beyond the classroom.</p>
           </div>
           <div class="professor-card">
-            <img src="dr-haridas-mohanta.jpg" alt="Dr. Haridas Mohanta">
+            <img src="img/dr-haridas-mohanta.jpg" alt="Dr. Haridas Mohanta">
             <h3>Dr. Haridas Mohanta</h3>
             <p>Your insightful lessons and encouragement have opened new doors of understanding for us. Thank you for being an incredible teacher.</p>
           </div>
           <div class="professor-card">
-            <img src="dr-asmita-mohanty.jpg" alt="Dr. Asmita Mohanty">
+            <img src="img/dr-asmita-mohanty.jpg" alt="Dr. Asmita Mohanty">
             <h3>Dr. Asmita Mohanty</h3>
             <p>Your kindness and wisdom make learning a joy. Thank you for being such a wonderful guide.</p>
           </div><div class="professor-card">
-            <img src="mr-manas-ranjan-jena.jpg" alt="Mr. Manas Ranjan Jena">
+            <img src="img/mr-manas-ranjan-jena.jpg" alt="Mr. Manas Ranjan Jena">
             <h3>Mr. Manas Ranjan Jena</h3>
             <p>With your guidance, we’ve learned to face challenges head-on. Your support means the world to us.</p>
           </div>
 <div class="professor-card">
-            <img src="mr-debashis-sahoo.jpg" alt="Mr. Debashis Sahoo">
+            <img src="img/mr-debashis-sahoo.jpg" alt="Mr. Debashis Sahoo">
             <h3>Mr. Debashis Sahoo</h3>
             <p>Thank you for making learning an engaging journey. Your enthusiasm and expertise have left a lasting impact.</p>
 </div>
 
 
           <div class="professor-card">
-            <img src="dr-asim-pratihari.jpg" alt="Dr. Asim Pratihari">
+            <img src="img/dr-asim-pratihari.jpg" alt="Dr. Asim Pratihari">
             <h3>Dr. Asim Pratihari</h3>
             <p>Your Your passion for teaching and deep understanding have inspired us all. We are grateful for your mentorship.</p>
           </div>
           <div class="professor-card">
-    <img src="dr-geetika-tripathy.jpg" alt="Dr. Geetika Tripathy">
+    <img src="img/dr-geetika-tripathy.jpg" alt="Dr. Geetika Tripathy">
     <h3>Dr. Geetika Tripathy</h3>
     <p>Your gentle guidance and wisdom have made a lasting impact on our journey. Thank you for being an incredible mentor.</p>
 </div>
 
           <div class="professor-card">
-            <img src="mr-paresh-ranjan-das.jpg" alt="Mr. Paresh Ranjan Das">
+            <img src="img/mr-paresh-ranjan-das.jpg" alt="Mr. Paresh Ranjan Das">
             <h3>Mr. Paresh Ranjan Das</h3>
             <p>Your guidance and dedication have paved the way for our success. Thank you for always inspiring us to reach new heights.</p>
           </div>
           
           <div class="professor-card">
-            <img src="mrs-priyanka-sahoo.jpg" alt="Mrs. Priyanka Sahoo">
+            <img src="img/mrs-priyanka-sahoo.jpg" alt="Mrs. Priyanka Sahoo">
             <h3>Mrs. Priyanka Sahoo</h3>
             <p>Thank you for your unwavering support and for always believing in us. Your kindness and knowledge are truly appreciated.</p>
           </div>
@@ -79,7 +79,7 @@
           
         </div>
       </div><div class="professor-card">
-            <img src="ms-krishna-manjari-jena.jpg" alt="Ms. Krishna Manjari Jena">
+            <img src="img/ms-krishna-manjari-jena.jpg" alt="Ms. Krishna Manjari Jena">
             <h3>Ms. Krishna Manjari Jena</h3>
             <p>Your warmth and patience make the learning environment so much brighter. We appreciate all that you do.</p>
           </div>
