--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <h2>Celebrating Our Amazing Teachers</h2>
         <p>You are the guiding light that shapes young minds and inspires greatness. We are grateful for your dedication and hard work.</p>
-        <button class="btn-primary">Explore</button>
+       <!--<button class="btn-primary">Explore</button> -->
       </div>
     </section>
     <section class="professors">
