--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
       <div class="container">
         <h2>Schedule of Events</h2>
         <ul>
-          <li>9:00 am - 10:00 am: Welcome and Registration</li>
-          <li>10:00 am - 11:00 am: Keynote Address</li>
+          <li>10:00 am - 10:30 am: Welcome and inauguration</li>
+          <li>10:30 am - 11:00 am: Keynote Address</li>
           <li>11:00 am - 12:00 pm: Cultural Program</li>
-          <li>12:00 pm - 1:00 pm: Lunch Break</li>
-          <li>1:00 pm - 2:00 pm: Award Ceremony</li>
+    <!--    <li>12:00 pm - 1:00 pm: Lunch Break</li>
+          <li>1:00 pm - 2:00 pm: Award Ceremony</li> -->
         </ul>
       </div>
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Sambalpur University</p>
+    <p>&copy; 2024 Sambalpur University</p>
   </footer>
 
 <script>
